# advent_of_code_2024

./: .gitignore  README.md  flake.nix  pyproject.toml
days/: 01.py  02.py  03.py  04.py  05.py  06.py
